# Office-hours

./: README.md
FacultyTime-main/FacultyTime-main/: README.md  ROBOTS.md  pyproject.toml
FacultyTime-main/FacultyTime-main/examples/: sample_busy.csv
FacultyTime-main/FacultyTime-main/src/facultytime/: __init__.py  __main__.py  app.py  csv_io.py  scheduling.py
FacultyTime-main/FacultyTime-main/src/facultytime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
FacultyTime-main/FacultyTime-main/tests/: test_csv_io.py  test_scheduling.py
