[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "facultytime"
version = "0.1.0"
description = "Desktop helper to suggest office-hour times from student availability (busy blocks)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FacultyTime contributors" }]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
facultytime = "facultytime.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
